<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Campus Móvil</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Campus Movil</string>
    <string name="student_name">Student\'s Name</string>
    <string name="course_detail_lblp1">P1</string>
    <string name="course_detail_lblp2">P2</string>
    <string name="course_detail_lblp3">P3</string>
    <string name="course_detail_lblp4">P4</string>
    <string name="course_detail_lblFnl">Final</string>
    <string name="course_detail_lblTotal">Total</string>
    <string name="title_activity_splash">Splash</string>
    <string name="tec_logo">Tec Logo</string>
    <string name="support_email">campusmovilapp@gmail.com</string>
    <string name="preferences_notifications">Activar o desactivar notificaciones</string>
    <string name="preferences_notifications_deactivated">Notificaciones Desactivadas</string>
    <string name="preferences_notifications_activated">Notificaciones Activadas</string>
    <string name="preferences_notifications_title">Notificaciones</string>
    <string name="prefferences_mail_summary">¡Envíanos Tus Dudas y Comentarios!</string>
    <string name="preferences_mail_title">Enviar comentarios</string>
    <string name="preferences_about">Acerca de</string>
    <string name="general_average">Promedio General</string>
    <string name="title_activity_settings">Ajustes</string>

</resources>